; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_hci.c_hci_new.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_hci.c_hci_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hci_link = type { i32 }

@hci_links = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.hci_link* @hci_new() #0 {
  %1 = alloca %struct.hci_link*, align 8
  %2 = alloca %struct.hci_link*, align 8
  %3 = call %struct.hci_link* @btmemb_alloc(i32* @hci_links)
  store %struct.hci_link* %3, %struct.hci_link** %2, align 8
  %4 = load %struct.hci_link*, %struct.hci_link** %2, align 8
  %5 = icmp eq %struct.hci_link* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store %struct.hci_link* null, %struct.hci_link** %1, align 8
  br label %11

7:                                                ; preds = %0
  %8 = load %struct.hci_link*, %struct.hci_link** %2, align 8
  %9 = call i32 @memset(%struct.hci_link* %8, i32 0, i32 4)
  %10 = load %struct.hci_link*, %struct.hci_link** %2, align 8
  store %struct.hci_link* %10, %struct.hci_link** %1, align 8
  br label %11

11:                                               ; preds = %7, %6
  %12 = load %struct.hci_link*, %struct.hci_link** %1, align 8
  ret %struct.hci_link* %12
}

declare dso_local %struct.hci_link* @btmemb_alloc(i32*) #1

declare dso_local i32 @memset(%struct.hci_link*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
